--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -82,6 +82,9 @@
     <!-- Include JavaScript files -->
     <script src="{{ url_for('static', filename='js/typewriter.js') }}"></script>
     <script src="{{ url_for('static', filename='js/counting.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/sliding.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/popup_download.js') }}"></script>
+
 
 </body>
 
