--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -10,10 +10,15 @@
         <ul>
             {% for project in projects %}
             <li>
-                <h3>{{ project.name }}</h3>
-                <p><strong>Description:</strong> {{ project.description }}</p>
-                <p><strong>Technologies:</strong> {{ project.technologies }}</p>
-                <p><strong>Status:</strong> {{ project.status }}</p>
+                <div class="card mb-3">
+                  <div class="card-body">
+                    <h3 class="card-title">{{ project.name }}</h3>
+                    <p class="card-text">{{ project.description }}</p>
+                    <p><strong>Tech:</strong> {{ project.technologies }}</p>
+                    <p><strong>Status:</strong> {{ project.status }}</p>
+                  </div>
+                </div>
+
             </li>
             {% endfor %}
         </ul>
