--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -41,7 +41,7 @@
         {% endblock %}
     </div>
 
-    <div class="footer">
+    <div class="footer" style="color: white;">
         <div class="footer-column">
             <h3>Contacts</h3>
             <p>Email: example@email.com</p>
